@@ -1,3 +1,10 @@
+2014-10-17  Tim Horton  <timothy_horton@apple.com>
+
+        Fix the build with the public SDK.
+
+        * WebCoreSupport/WebSelectionServiceController.mm:
+        We should transition all this SPI to real SPI headers as soon as possible.
+
 2014-10-16  Tim Horton  <timothy_horton@apple.com>
 
         Implement selection services menu for Legacy WebKit
